app/javascript/style/components/_message.scss
@use "../utils/color";

.message {
  display: flex;
  justify-content: flex-start;
  margin: 10px 10px 0 10px;

  &:last-of-type {
    padding-bottom: 10px;
  }

  &--right {
    justify-content: flex-end;
  }

  &--grouped {
    margin-top: 5px;
  }

  &__content {
    display: flex;

    &__user {
      display: flex;
      flex-direction: column;

      .message--left & {
        align-items: flex-start;
      }

      .message--right & {
        align-items: flex-end;
      }

      &__name {
        color: color.$neutral-middle;
        line-height: 1;
        margin-bottom: 2px;

        .message--highlighted & {
          color: color.$veue-corporate;
        }

        .message--announcement & {
          color: color.$red-highlight;
        }
      }
    }

    &__avatar {
      img {
        width: 32px;
        height: 32px;
      }

      &--left {
        margin-right: 10px;
      }
      &--right {
        margin-left: 10px;
      }
    }

    &__text {
      background-color: color.$white;
      color: color.$neutral-dark;
      border: 1px solid color.$neutral-accents;
      padding: 8px 15px;
      width: max-content;

      .message--highlighted & {
        background-color: color.$veue-corporate;
        color: color.$white;
        border: none;
      }

      .message--announcement & {
        background: color.$red-highlight;
        color: color.$white;
      }

      .message--right & {
        border-radius: 10px 0px 10px 10px;
        &.text--margin {
          margin-right: 42px;
        }
      }

      .message--left & {
        border-radius: 0px 10px 10px 10px;
        &.text--margin {
          margin-left: 42px;
        }
      }
    }
  }

  .user-avatar {
    image {
      width: 1.5rem;
      height: 1.5rem;
      border-radius: 50%;
    }
  }
}

